@@ -1,5 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/06/09:
+   * Minor change to the /bin/sh - solution (Mathias)
+     we are using now just $SHELL -c <line_here>
+     src/FbCommands.cc util/fbrun/FbRun.cc
 *07/06/08:
    * Fix transient windows getting tabbed from apps file and not changing layers
      when main window is in a lowered tab (Mark)
